syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_relation_datasource_user;

message DsRelationDatasourceUserBean {

     int32 id=1 ;
     int32 user_id=2 ;
     optional int32  datasource_id=3 ;
     optional int32 perm=4 ;
     optional string create_time= 5;
     optional string  update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationDatasourceUserBeanService {
  rpc ListDsRelationDatasourceUserBeans(ListDsRelationDatasourceUserBeansRequest) returns (ListDsRelationDatasourceUserBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationDatasourceUserBeans"
    };
  }

  rpc GetDsRelationDatasourceUserBean(GetDsRelationDatasourceUserBeanRequest) returns (DsRelationDatasourceUserBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationDatasourceUserBeans/*}"
    };
  }

  rpc CreateDsRelationDatasourceUserBean(CreateDsRelationDatasourceUserBeanRequest) returns (DsRelationDatasourceUserBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationDatasourceUserBeans"
      body: "DsRelationDatasourceUserBean"
    };
  }

  rpc UpdateDsRelationDatasourceUserBean(UpdateDsRelationDatasourceUserBeanRequest) returns (DsRelationDatasourceUserBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationDatasourceUserBean.name=DsRelationDatasourceUserBeans/*}"
      body: "DsRelationDatasourceUserBean"
    };
  }

  rpc DeleteDsRelationDatasourceUserBean(DeleteDsRelationDatasourceUserBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationDatasourceUserBeans/*}"
    };
  }
}

// message DsRelationDatasourceUserBean {
// ! This should be defined elsewhere
// }

message ListDsRelationDatasourceUserBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsRelationDatasourceUserBeansResponse {
  // The field name should match the noun "DsRelationDatasourceUserBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationDatasourceUserBean DsRelationDatasourceUserBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationDatasourceUserBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationDatasourceUserBeanRequest {
  // The parent resource name where the DsRelationDatasourceUserBean is to be created.
  string parent = 1;

  // The DsRelationDatasourceUserBean id to use for this DsRelationDatasourceUserBean.
  string DsRelationDatasourceUserBean_id = 2;

  // The DsRelationDatasourceUserBean resource to create.
  // The field name should match the Noun in the method name.
  DsRelationDatasourceUserBean DsRelationDatasourceUserBean = 3;
}

message UpdateDsRelationDatasourceUserBeanRequest {
  // The DsRelationDatasourceUserBean resource which replaces the resource on the server.
  DsRelationDatasourceUserBean DsRelationDatasourceUserBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationDatasourceUserBeanRequest {
  // The resource name of the DsRelationDatasourceUserBean to be deleted.
  string name = 1;
}
